# UTAH-CS6620

./: .gitignore  CMakeLists.txt  README.md  objects.h  raytracer.cpp  scene.h  viewport.cpp  xmlload.cpp
lib/cyCodeBase/: CMakeLists.txt  cyColor.h  cyCore.h  cyMatrix.h  cyVector.h
lib/lodepng/: CMakeLists.txt
lib/tinyxml/: CMakeLists.txt
